--- a/sample-app/pom.xml
+++ b/sample-app/pom.xml
@@ -88,7 +88,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>${spring.boot.version}</version>
         <configuration>
-          <mainClass>de.adorsys.smartbanking.tenant.tenant.TenantApplication</mainClass>
+          <mainClass>de.adorsys.smartbanking.tenant.sample.TenantApplication</mainClass>
         </configuration>
         <executions>
           <execution>
