--- a/tenant/pom.xml
+++ b/tenant/pom.xml
@@ -18,12 +18,12 @@
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-mongodb</artifactId>
-      <version>1.9.5.RELEASE</version>
+      <version>[1.9.0.RELEASE, 2.0.0.RELEASE)</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.1.7</version>
+      <version>[1.0.0, 2.0.0)</version>
       <scope>provided</scope>
     </dependency>
 
